# CSVFC

./: .gitignore  .travis.yml  CSVFC.cabal  LICENSE  README.md  main.hs  test.csv
app/: Main.hs
lib/: CSVFC.hs  CSVFCore.hs
src/: main.hs
test/: TestCSVFC.hs  TestCSVFCore.hs
tests/: tests.hs
