name:                CSVFC
version:             0.1.0.0
synopsis:            Simple command line flash cards
description:         Please see README.md
homepage:            https://github.com/nettapper/CSVFC#readme
license:             BSD3
license-file:        LICENSE
author:              Conner Dunn
maintainer:          connerdunn7399@gmail.com
copyright:           2016 Conner Dunn
category:            Command Line
build-type:          Simple
cabal-version:       >=1.10

executable CSVFC
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
