name:                CSVFC
version:             0.1.2.0
synopsis:            Simple command line flash cards
description:         Please see README.md
homepage:            https://github.com/nettapper/CSVFC#readme
license:             BSD3
license-file:        LICENSE
author:              Conner Dunn
maintainer:          connerdunn7399@gmail.com
copyright:           2016 Conner Dunn
category:            Command Line
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:       lib
  exposed-modules:      CSVFCore
  ghc-options:          -Wall -fwarn-tabs
  build-depends:        base >= 4.7 && < 5
                      , text
  default-language:     Haskell2010

executable CSVFC
  hs-source-dirs:       src
  main-is:              Main.hs
  ghc-options:          -Wall -fwarn-tabs
  build-depends:        base >= 4.7 && < 5
                      , text
                      , random
                      , CSVFC
  default-language:     Haskell2010

test-suite tests
  hs-source-dirs:       test
  main-is:              TestCSVFCore.hs
  ghc-options:          -Wall -fno-warn-orphans
  type:                 exitcode-stdio-1.0
  build-depends:        base
                      , text
                      , CSVFC
                      , QuickCheck
                      , hspec
  default-language:     Haskell2010
